--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -175,7 +175,7 @@
             margin: 0;
             color: #4a5568;
             line-height: 1.6;
-            max-width: 800px;
+            max-width: 100%;
             font-size: 1.05em;
             opacity: 0.9;
         }
