--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -277,6 +277,7 @@
             width: 100%;
             /* padding: 15px 15px;
             background-color: #f8f9fa; */
+            padding-bottom: 15px;
             gap: 15px;
             margin: 0;
             box-sizing: border-box;
