Added a second column for theme information.

--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -1433,19 +1433,33 @@
           <p><strong>Note:</strong> Not all indicators have time-series data. </p>
       </div>
 
-      <!-- Content Section -->
-      <div class="content-section">
-        <div class="indicator-info">
-          <div class="indicator-icon">
-            <i class="fas {{ indicators.page_name.icon }}"></i>
-          </div>
-          <div class="text-content">
-            <h1 class="indicator-title">{{ indicators.page_name.title }}</h1>
-            <p class="indicator-description">{{ indicators.page_name.description }}</p>
-          </div>
+        <div class="two-column-section">
+            <div class="column-left">
+              <!-- Content Section -->
+                <div class="indicator-info">
+                  <div class="indicator-icon">
+                    <i class="fas {{ indicators.page_name.icon }}"></i>
+                  </div>
+                  <div class="text-content">
+                    <h1 class="indicator-title">{{ indicators.page_name.title }}</h1>
+                    <p class="indicator-description">{{ indicators.page_name.description }}</p>
+                  </div>
+                </div>
+            </div>
+            <div class="column-right">
+              <!-- Content Section -->
+                <div class="indicator-info">
+                  <div class="indicator-icon">
+                    <i class="fas {{ indicators.page_name.icon }}"></i>
+                  </div>
+                  <div class="text-content">
+                    <h1 class="indicator-title">{{ indicators.page_name.title }}</h1>
+                    <p class="indicator-description">{{ indicators.page_name.description }}</p>
+                  </div>
+                </div>
+              </div>
         </div>
-      </div>
-      </div>
+    </div>
 
       <!-- Map Section -->
     <div class="map-container">
